--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			        if(content == 'banana'){
 			        	$('.easter').attr("src", " ");
 			        	$('.easter').remove();
-			        	jQuery('#output').text('Maybe check your phone? There\'s no banana endpoints here.');
+			        	jQuery('#output').text('Maybe check your phone? There\'s no banana endpoint here.');
 			        	var phone = $("<iframe class='easter' type='text/html' width='940' height='600' src='http://www.youtube.com/embed/j5C6X9vOEkU?autoplay=1&start=11&controls=0&showinfo=0' frameborder='0'/>");
 			            $('#restcontainer').after(phone);
 			        }
