Added Google Tag Manager

--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
 	<link rel="stylesheet" href="https://www.e-conomic.com/css/facelift.css?open&amp;v=2" media="screen">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="stylesheet" href="css/highlight.styles/tomorrow.css">
-
 </head>
 <body>
+<!-- Google Tag Manager / COM -->
+<script>
+  dataLayer = [];
+</script>
+<!-- Google Tag Manager -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-5CQC7S"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5CQC7S');</script>
+<!-- End Google Tag Manager -->	
 <header class="header" id="header" role="banner">
 	<div id="mobile_navigation"></div>
 		<div id="support">
