--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
 	<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 	<script src="js/highlight.pack.js"></script>
+	<script src="js/purl.js"></script>
 	<link rel="stylesheet" href="https://www.e-conomic.com/css/w-screen.css?open&amp;v=20150319" media="screen">
 	<link rel="stylesheet" href="https://www.e-conomic.com/css/facelift.css?open&amp;v=2" media="screen">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="stylesheet" href="css/highlight.styles/tomorrow.css">
+	<script>
+		$(document).ready(function(){
+			var path = $.url().param('path');
+			if(path)
+			{
+				$('#requestpath').val(path);
+				interactive_call();
+			}
+		});
+	</script>
+
 </head>
 <body>
 <!-- Google Tag Manager / COM -->
@@ -139,10 +151,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			        var parameters = jQuery('#parameters').val()
 			        var call_url = 'https://restapi.e-conomic.com/' + content + '?demo=true' + parameters;
 			        jQuery.ajax({
-			      dataType: 'json',
-			      url: call_url,
-			      context: document.body
-			    }).complete(function(data) {
+					      dataType: 'json',
+					      url: call_url,
+					      context: document.body
+					    }).complete(function(data) {
 
 			        if (data['status'] == 500) {
 			            jQuery('#output').text(data['status'] + ' ' + data['statusText']);
@@ -177,6 +189,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			         });
 			      }
     			 //end else
+
+    			 	history.pushState(null, null, 'index.html?path=' + thispath);
+
     			 }
 
 				$("#requestpath, #parameters").keyup(function(event) {
