Added trigger to save history on go button as well :-)

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			        jQuery('#requestpath').val(call);
 			        jQuery('#parameters').val(extension);
 			        interactive_call();
+			        save_history();
 			    }
 
 			    function interactive_call(){
