Stupid stupid stupid IE

--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<div class="responsetools">
 					<div class="httpstatus"></div>
 					<div class="patharea">
-						<div id="container">
-							<div id="flipper" class="shadow">
-							  <div class="front">
+						<div id="card">
+							<div id="content">
+							  <div class="cardFront">
 							    <div class="fullpath"></div>
 							  </div>
-							  <div class="back">
+							  <div class="cardBack">
 							    <input class="copyme" />
 							  </div>
 							</div>
@@ -332,12 +332,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 				//Copy full_url to clipboard
 				$('.copybtn').on('click', function(event) {
-					$('#container').toggleClass('hover');
+					$('#card').toggleClass('applyflip');
 					$('.copyme').select();
 				});
 				//Rotate back when out of focus
 				$('.copyme').on('focusout', function(event) {
-					$('#container').toggleClass('hover');
+					$('#card').toggleClass('applyflip');
 				});
 			</script>
 			</div>
