--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<div class="responsetools">
 					<div class="httpstatus"></div>
 					<div class="patharea">
-						<div id="card">
-							<div id="content">
+						<div class="card">
+							<div class="content">
 							  <div class="cardFront">
 							    <div class="fullpath"></div>
 							  </div>
