--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 			});
 
 			//Copy full_url to clipboard
-			$('.copybtn').on('click', function(event) {
+			$('.copybtn').on('mouseup', function(event) {
 				$('.card').toggleClass('applyflip');
 				$('.copyme').select();
 				return false;
